--- a/.github/workflows/releaseBuild.yml
+++ b/.github/workflows/releaseBuild.yml
@@ -44,3 +44,32 @@ jobs:
           name: windowsBuild
           path: export\release\windows\bin\*
           if-no-files-found: error
+  Desktop_Debug:
+    runs-on: ${{matrix.os}}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-latest]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@main 
+
+      - uses: krdlab/setup-haxe@master
+        with:
+          haxe-version: 4.3.4
+
+      - name: Install Libraries
+        run: |
+          haxelib setup C:/haxelib
+          .\"setup/windows.bat"
+      - name: Compile (Windows Debug)
+        if: startsWith(matrix.os, 'windows')
+        run: haxelib run lime build windows -D officialBuild -debug
+
+      - name: Upload Artifact (Windows Debug)
+        if: startsWith(matrix.os, 'windows')
+        uses: actions/upload-artifact@main
+        with:
+          name: windowsBuild_Debug
+          path: export\debug\windows\bin\*
+          if-no-files-found: error
